tests/substructural/composition/copy_drop_struct_with_linear_field_reports_both.err.expected
error: at 2:39: [COMP-CopyMarkerNotSatisfied] In struct 'Bad' (marked Copy), field 'r' has type &out i64 which is not Copy
   |
 2 |             struct Bad: Copy + Drop { r: &out i64 }
   |                                       ^^^^^^^^^^^
error: at 2:39: [COMP-DropMarkerNotSatisfied] In struct 'Bad' (marked Drop), field 'r' has type &out i64 which is not Drop
   |
 2 |             struct Bad: Copy + Drop { r: &out i64 }
   |                                       ^^^^^^^^^^^
